<resources>
    <string name="applicationName">"ConX2Share"</string>
    <string name="labelSignin">"Sign In"</string>
    <string name="labelSignup">"Sign Up"</string>
    <string name="labelEmail">"Email"</string>
    <string name="labelPassword">"Password"</string>
    <string name="labelOr">"or"</string>
    <string name="labelUsername">"Username"</string>
    <string name="labelConfirmPassword">"Confirm Password"</string>
    <string name="labelFirstName">"First Name"</string>
    <string name="labelLastName">"Last Name"</string>
    <string name="blurbTermsAndConditions">"I've read and agreed to the terms and conditions"</string>
    <string name="wz_live_host_address" translatable="false">livestream.conx2share.com</string>
    <string name="wz_staging_host_address" translatable="false">streaming.staging.conx2share.com</string>
    <string name="statusAuthenticating">"Authenticating\u2026"</string>
    <string name="statusUnexpectedError">"An unexpected error has occurred."</string>
    <string name="statusMessagedMarkedAsViewed">"Message marked as viewed"</string>
    <string name="labelSuccess">"Success"</string>
    <string name="statusMessageSent">"Message Sent"</string>
    <string name="statusMessageSentFailed">"Message failed to send"</string>
    <string name="hintEnterMessageHere">"Enter Message Here…"</string>
    <string name="statusGotSentMessages">"Got Sent Messages"</string>
    <string name="hintTypeAMessage">"Type a message…"</string>
    <string name="hintAddTextHere">"Add text here…"</string>
    <string name="statusFileError">"File Error"</string>
    <string name="statusCameraError">"Camera Error"</string>
    <string name="labelAddAttachment">"Add Attachment:"</string>
    <string name="labelTakeAPhoto">"Take a Photo"</string>
    <string name="labelTakeAVideo">"Take a Video"</string>
    <string name="labelMessageType">"Message Type:"</string>
    <string name="labelError">"Error:"</string>
    <string name="labelPost">"Post"</string>
    <string name="titleCreatePost">"Create Post"</string>
    <string name="labelPostTo">"To:"</string>
    <string name="labelEveryone">"Everyone"</string>
    <string name="statusPostSuccessful">"Post successful"</string>
    <string name="statusPostFailed">"Post failed: "</string>
    <string name="titleUploadPhoto">"Upload Photo"</string>
    <string name="promptUploadOrSelectImageQuestion">"Would you like to take a photo or upload one from your library?"</string>
    <string name="promptUploadOrSelectVideoQuestion">"Would you like to take a video or upload one from your library?"</string>
    <string name="labelTakePhoto">"Take Photo"</string>
    <string name="labelLibrary">"Library"</string>
    <string name="blurbNotYetImplemented">"Not yet implemented."</string>
    <string name="labelDrawerOpen">"Drawer Open"</string>
    <string name="labelDrawerClose">"Drawer Close"</string>
    <string name="labelSignout">"Logout"</string>
    <string name="labelProfilePicture">"Profile Picture"</string>
    <string name="labelShareTo">"Share to..."</string>
    <string name="labelCancel">"Cancel"</string>
    <string name="labelContacts">"Contacts"</string>
    <string name="statusInviteSuccessful">"Friends invited"</string>
    <string name="statusInviteFailed">"Friend invite failed: "</string>
    <string name="titleGroupName">"GROUP NAME"</string>
    <string name="labelCreateGroup">"CREATE GROUP"</string>
    <string name="blurbGroupNameInvalid">"The organization must have a name"</string>
    <string name="blurbGroupImageInvalid">"The organization must have an image"</string>
    <string name="labelEditGroup">"EDIT GROUP"</string>
    <string name="blurbGroupCreationFail">"Group was not successfully created.  Please Try Again."</string>
    <string name="blurbGroupCreationSuccess">"Created Group %s!"</string>
    <string name="blurbGroupUpdateFail">"Group was not successfully updated.  Please Try Again."</string>
    <string name="blurbGenericErrorMessage">"An error has occurred. Please try again."</string>
    <string name="statusNoUsersFound">"No users found matching criteria"</string>
    <string name="labelMembers">"Members"</string>
    <string name="labelSend">"Send"</string>
    <string name="statusFailedToTetrieveMessages">"Fail to retrieve new messages"</string>
    <string name="questionSaveMessage">"Save Message?"</string>
    <string name="hintFriendsName">"First Name Last Name"</string>
    <string name="blurbErrorLoadingIndex">"An error has occurred while loading."</string>
    <string name="titleNewMessage">"New Message"</string>
    <string name="statusSentYouANewMessage">"Sent you a new message"</string>
    <string name="statusReadYourMessage">"Read your message"</string>
    <string name="labelCommentedOnYourPost">"Commented on your post"</string>
    <string name="statusInvitedYouToJoin">"Invited you to join"</string>
    <string name="statusLoginFailed">"Login Failed. Please check internet connection and try again."</string>
    <string name="labelNone">"None"</string>
    <string name="label15s">"15s"</string>
    <string name="label30s">"30s"</string>
    <string name="label60s">"60s"</string>
    <string name="label120s">"120s"</string>
    <string name="labelHome">"Home"</string>
    <string name="labelMessages">"Messages"</string>
    <string name="labelFriends">"Friends"</string>
    <string name="labelGroups">"Groups"</string>
    <string name="labelNotifications">"Notifications"</string>
    <string name="labelSubscriptionsGP">"GET PLUS"</string>
    <string name="labelInvite">"Invite"</string>
    <string name="labelStore">"Store"</string>
    <string name="labelAbout">"ABOUT"</string>
    <string name="labelChange">"change"</string>
    <string name="labelPushMNotifications">"PUSH NOTIFICATIONS"</string>
    <string name="titleSwitchTitle1">"SWITCH TITLE 1"</string>
    <string name="titleSwitchTitle2">"SWITCH TITLE 2"</string>
    <string name="labelRetry">"RETRY"</string>
    <string name="statusUnableToGatherFriendsToInvite">"Unable to gather friends to invite"</string>
    <string name="statusUnableToInviteFriends">"Unable to invite friends"</string>
    <string name="statusUnableToPostToGroup">"Unable to post to organization"</string>
    <string name="statusUnableToPost">"Unable to post"</string>
    <string name="statusPostAlreadyFlagged">"Unable to flag post, you have already flagged this"</string>
    <string name="statusUnableToFlagPost">"Unable to flag post"</string>
    <string name="statusUnableToGetPost">"Unable to get post"</string>
    <string name="statusUnableToGetPostComments">"Unable to get post comments"</string>
    <string name="statusUnableToLikePost">"Unable to like post"</string>
    <string name="statusUnableToUnlikePost">"Unable to unlike post"</string>
    <string name="statusUnableToCreateGroup">"Unable to create organization"</string>
    <string name="statusUnableToUpdateGroup">"Unable to update organization"</string>
    <string name="statusUnableToRefreshFeed">"Unable to refresh feed"</string>
    <string name="statusUnableToGetPosts">"Unable to get posts"</string>
    <string name="statusUnableToGetUnreadMessages">"Unable to get unread messages"</string>
    <string name="statusUnableToGetFriends">"Unable to get friends"</string>
    <string name="statusUnableToGetGroup">"Unable to get organization"</string>
    <string name="statusUnableToGetGroupPosts">"Unable to get organization posts"</string>
    <string name="statusUnableToGetGroupList">"Unable to get organization list"</string>
    <string name="statusUnableToRemoveOrDeleteGroup">"Unable to remove or delete organization"</string>
    <string name="statusUnableToGetChats">"Unable to get chats"</string>
    <string name="statusUnableToGetSavedMessages">"Unable to get saved messages"</string>
    <string name="statusUnableToUpdateNotificationAsViewed">"Unable to update notification as viewed"</string>
    <string name="statusUnableToGetMessage">"Unable to get message"</string>
    <string name="statusUnableToFollowUser">"Unable to follow user"</string>
    <string name="statusUnableToUnfollowUser">"Unable to unfollow user"</string>
    <string name="statusUnableToLoadProfile">"Unable to load profile"</string>
    <string name="statusUnableToUpdateAvatar">"Unable to update avatar"</string>
    <string name="statusUnableToInviteUserToGroup">"Unable to invite user to organization"</string>
    <string name="statusUnableToPurchaseSubscription">"Unable to purchase subscription"</string>
    <string name="statusUnableToUpdateUsersProfile">"Unable to update user's profile"</string>
    <string name="statusUnableToSendMessage">"Unable to send message"</string>
    <string name="statusUnableToSetExpiration">"Unable to set message expiration"</string>
    <string name="statusUnableToSaveMessage">"Unable to save message"</string>
    <string name="statusUnableToGetChat">"Unable to get chat with user"</string>
    <string name="statusUnableToGetSentMessages">"Unable to get sent messages"</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="terms_of_service_and_privacy_policy">I\'ve read and agree to the terms of service and privacy policy</string>
    <string name="submit">submit</string>
    <string name="promo_code_optional">Promo Code (optional)</string>
    <string name="enter_your_comment_here">Enter your comment here...</string>
    <string name="update">Update</string>
    <string name="edit_comment">Edit Comment</string>
    <string name="sign_up_business_notice">This is a business account -- further account setup is required</string>
    <string name="birthday">Birthday</string>
    <string name="say_no_type_chooser_header">What would you like to do?</string>
    <string name="say_no_type_chooser_chat_title">START CHAT</string>
    <string name="say_no_type_chooser_chat_description">Start a text chat with your local counselor, share pictures and videos. You can leave the chat whenever you want.</string>
    <string name="say_no_type_chooser_report_title">SEND REPORT</string>
    <string name="say_no_type_chooser_report_description">Select this options to send a quick report to your local counselor, attach a picture or a video.</string>
    <string name="say_no_anonymity_chooser_header">Prefer to stay anonymous?</string>
    <string name="say_no_anonymity_chooser_anonymous_title">STAY ANONYMOUS</string>
    <string name="say_no_anonymity_chooser_anonymous_description">Your name and photo will not be visible for the counsellor. This can be turned off during a chat.</string>
    <string name="say_no_anonymity_chooser_non_anonymous_title">DISPLAY MY IDENTITY</string>
    <string name="say_no_anonymity_chooser_non_anonymous_description">Counsellor will be able to see your name and your profile picture along with other information.</string>
    <string name="say_no_sign_in_info_dialog_title">What is</string>
    <string name="say_no_sign_in_info_dialog_btn">Got it!</string>
    <string name="say_no_sign_in_info_dialog_text">The Say NO! program was created as a part of the Conx2share Foundation as an Anti-Bullying and Anti-Drug Abuse program.\n\n
    Being a Say NO! member enables you to report bullying  or drug abuse incidents in a click.\n\n
    The Say NO! live chat allows you to chat live with a counselor if you are in need of help or wanting to report you peers being bullied.\n\n
    Join your school group or office peers by becoming a Say NO! member</string>
</resources>