<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/conx_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:src="@drawable/logo" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:isScrollContainer="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <EditText
                android:id="@+id/sign_up_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@color/white"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                android:singleLine="true"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/sign_up_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@color/white"
                android:hint="@string/username"
                android:padding="5dp"
                android:singleLine="true"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/sign_up_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@color/white"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="5dp"
                android:singleLine="true"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/sign_up_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@color/white"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="5dp"
                android:singleLine="true"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/sign_up_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@color/white"
                android:hint="@string/first_name"
                android:inputType="textCapSentences"
                android:padding="5dp"
                android:singleLine="true"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/sign_up_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@color/white"
                android:hint="@string/last_name"
                android:inputType="textCapSentences"
                android:padding="5dp"
                android:singleLine="true"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/sign_up_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@color/white"
                android:hint="@string/birthday"
                android:textSize="18sp"
                android:padding="5dp"
                android:textCursorDrawable="@null"
                android:focusable="false"
                android:clickable="true"
                android:singleLine="true"
                android:imeOptions="actionNext"/>

            <EditText
                android:id="@+id/sign_up_promo_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@color/white"
                android:hint="@string/promo_code_optional"
                android:padding="5dp"
                android:singleLine="true"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/terms_and_conditions_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/terms_and_conditions_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:button="@xml/custom_checkbox" />

                <TextView
                    android:id="@+id/sign_up_ive_read_and_agree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/terms_of_service_and_privacy_policy"
                    android:textColor="@color/terms_and_conditions_gray"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/i_am_a_business_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/i_am_a_business_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:button="@xml/custom_checkbox" />

                <TextView
                    android:id="@+id/i_am_a_business_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up_business_notice"
                    android:textColor="@color/terms_and_conditions_gray"
                    android:textSize="16sp" />

            </LinearLayout>

            <Button
                android:id="@+id/sign_up_submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/sign_up_selector"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>