<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <com.conx2share.conx2share.ui.view.AvenirNextTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/old_password"
        android:textAllCaps="false"
        android:textSize="25dp" />

    <EditText
        android:id="@+id/old_password_input"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="#ffdddddd"
        android:inputType="textPassword"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="#ACACAC" />

    <com.conx2share.conx2share.ui.view.AvenirNextTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="12dp"
        android:text="@string/new_password"
        android:textAllCaps="false"
        android:textSize="25dp" />

    <EditText
        android:id="@+id/new_password_input"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="#ffdddddd"
        android:inputType="textPassword"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="#ACACAC" />

    <com.conx2share.conx2share.ui.view.AvenirNextTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="12dp"
        android:text="@string/confirm_new_password"
        android:textAllCaps="false"
        android:textSize="25dp" />

    <EditText
        android:id="@+id/confirm_new_password_input"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="#ffdddddd"
        android:inputType="textPassword"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="#ACACAC" />

    <Button
        android:id="@+id/change_password_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/submit"
        android:textAllCaps="true"
        android:textColor="#ff8a8a8a" />

</LinearLayout>