<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent" android:layout_height="250dp">

        <LinearLayout
            android:layout_width="match_parent" android:layout_height="250dp"
            android:background="@drawable/img_cover" android:gravity="center"
            android:orientation="vertical">

            <ImageView android:layout_width="match_parent" android:layout_height="wrap_content"
                android:src="@drawable/img_logo" />

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_gravity="center" android:layout_marginTop="15dp"
                android:text="@string/say_no_anonymity_chooser_header"
                android:textColor="@color/white" android:textSize="20sp" android:textStyle="bold" />

        </LinearLayout>

        <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/say_no_anonymity_chooser_stay_anonymous"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:gravity="center"
        android:padding="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_anonymity" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/say_no_anonymity_chooser_anonymous_title"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/say_no_anonymity_chooser_anonymous_description" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_grey" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/hint_gray_pressed" />

    <LinearLayout
        android:id="@+id/say_no_anonymity_chooser_non_anonymous"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:gravity="center"
        android:padding="20dp">

        <com.makeramen.roundedimageview.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/say_no_anonymity_chooser_user_avatar"
            android:layout_width="35dp"
            android:layout_height="42dp"
            app:riv_oval="true"
            tools:src="@drawable/friend_placeholder" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/say_no_anonymity_chooser_non_anonymous_title"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/say_no_anonymity_chooser_non_anonymous_description" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_grey" />

    </LinearLayout>
</LinearLayout>