<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
            android:id="@+id/edit_post_comment_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/messaging_toolbar_background">

        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <ImageButton
                    android:id="@+id/edit_post_comment_back_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/ic_action_back_grey"/>

            <TextView
                    android:id="@+id/edit_post_comment_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="22sp"
                    android:text="@string/edit_comment"
                    android:padding="10dp"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"/>


            <TextView
                    android:id="@+id/edit_post_comment_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/update"
                    android:textSize="20sp"
                    android:textColor="@color/conx_teal"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"/>

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <com.linkedin.android.spyglass.ui.RichEditorView
            android:id="@+id/edit_post_comment_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="300"
            android:layout_margin="10dp"
            android:hint="@string/enter_your_comment_here"
            android:focusable="false"
            android:focusableInTouchMode="false"/>

</LinearLayout>
